@@ -31,13 +31,13 @@ MYTHTV_CONFIGURE_OPTS +=    --compile-type=debug \
 #                                    #
 DEB_BUILD_ARCH ?= $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 ifeq "$(DEB_BUILD_ARCH)" "i386"
-	MYTHTV_CONFIGURE_OPTS +=  --cpu=i686 --enable-mmx --enable-xvmc --enable-xvmc-vld  --enable-vdpau
+	MYTHTV_CONFIGURE_OPTS +=  --cpu=i686 --enable-mmx --disable-xvmc  --enable-vdpau
 endif
 ifeq "$(DEB_BUILD_ARCH)" "sparc"
-	MYTHTV_CONFIGURE_OPTS += --enable-xvmc --enable-xvmc-vld --extra-cflags="-mcpu=ultrasparc -mvis"
+	MYTHTV_CONFIGURE_OPTS += --disable-xvmc --extra-cflags="-mcpu=ultrasparc -mvis"
 endif
 ifeq "$(DEB_BUILD_ARCH)" "amd64"
-	MYTHTV_CONFIGURE_OPTS += --enable-xvmc --enable-xvmc-vld --enable-vdpau
+	MYTHTV_CONFIGURE_OPTS += --disable-xvmc --enable-vdpau
 endif
 ifeq "$(DEB_BUILD_ARCH)" "armel"
 	MYTHTV_CONFIGURE_OPTS += --enable-vdpau --extra-cflags="-marm -fPIC -DPIC"
