@@ -7,6 +7,8 @@ mythtv (1:0.24.0+fixes27162-0ubuntu2) UNRELEASED; urgency=low
   * Remove unused package, mythmovies from build process.
   * Clean up the dependencies of a few packages, and harden them to the binary
     version.
+  * Disable XvMC as it's causing crashes.  VDPAU is better off in these situations
+    anyhow (LP: #660833)
 
  -- Mario Limonciello <Mario_Limonciello@Dell.com>  Thu, 11 Nov 2010 14:55:57 -0600
 
